# lingo

./: keepme.txt
cfg/: cfg.yml  dbcfg.yml  map_cfg.yml  srvcfg.yml
output/: run.sh
src/cpp/common_cpplib/: AutoLock.cpp  AutoLock.h  CMySocket.cpp  CMySocket.h  Makefile  Makefile.common_cpplib  Md5.cpp  Md5.h  OsInet.cpp  OsInet.h  PacketBase.cpp  PacketBase.h  common_cpplib.mpc  common_cpplib.sln  common_cpplib.vcproj  common_def.h  crc32.cpp  crc32.h  myautomutex.cpp  myautomutex.h  myepoll.cpp  myepoll.h  myepoll_linux.cxx  myepoll_linux.cxx_bak  myepoll_linux.h  myepoll_win32.cxx  myepoll_win32.h  mylogex.cpp  mylsnwrapper.cpp  mylsnwrapper.h  myos_cpp.cpp  myos_cpp.h  myrdp.cpp  myrdp.h  mytea.cpp  mytea.h  mythrdpoll.cpp  mythrdpoll.cpp_bak  (+12 more)
src/cpp/ini/libini-win/: ChangeLog  Makefile.in  TODO  aclocal.m4  configure  configure.in  libini.ncb  libini.sln  libini.spec  libini.spec.in  libini.vcproj
src/cpp/ini/libini-win/Debug/: BuildLog.htm  libini.lib  vc70.idb
src/cpp/ini/libini-win/Release/: BuildLog.htm  libini.lib  vc70.idb
src/cpp/ini/libini-win/include/: Makefile.am  Makefile.in  config.h
src/cpp/ini/libini-win/src/: Makefile.am  Makefile.in  libini_tcl.c
src/cpp/ini/libini-win/unix/: mkinstalldirs
src/cpp/ini/libini-win/win/VC/: libini.dsp
src/goserver/: go.mod  go.sum  make.sh  srvmake.sh  tmake.sh
src/lin/: go.mod  go.sum  make.sh  srvmake.sh  tmake.sh
src/lin_common/: getGoID.go  go.mod
src/lin_cor_pool/: cor_pool_test.go  go.mod
src/linq/: readme.txt
src/main/: go.mod  make.sh
unity_client/protocol/: protocol.txt
(+599 files in other folders)
