dnl Process this file with autoconf to produce a configure script.
AC_INIT(Makefile.am)
AC_CONFIG_AUX_DIR(unix)
AM_CONFIG_HEADER(include/config.h)

dnl Setup library CURRENT, REVISION and AGE
LIBCUR=1
LIBREV=6
LIBAGE=0
AM_INIT_AUTOMAKE(libini,1.$LIBCUR.$LIBREV)
dnl libtool-style version-info number
LIBVERSION=$LIBCUR:$LIBREV:$LIBAGE
AC_SUBST(LIBVERSION)

AC_CANONICAL_HOST

dnl Use C++ for tests.
AC_LANG_CPLUSPLUS

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB

dnl Initialise Libtool
AC_LIBTOOL_WIN32_DLL
AM_PROG_LIBTOOL

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_HEADER_STDC

dnl Add absolute directory for header files
FLAGS="-Wall"
CFLAGS="$CFLAGS $FLAGS"
CXXFLAGS="$CXXFLAGS $FLAGS"

AC_OUTPUT( \
libini.spec \
Makefile \
include/Makefile \
src/Makefile \
)
